--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray">#CDCDD3</color>
-    <color name="sea_100">#3DDBEA</color>
-    <color name="red">#F10000</color>
+    <color name="gray">#A3A2A1</color>
+    <color name="grafit">#3E3F3F</color>
+    <color name="orange">#F3A60C</color>
 </resources>
